fixed navbar readability, got rid of scale on any devices and hid horizontal overflow for IOS

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+html, body {
+  position: relative;
+  overflow-x: hidden;
+} 
+
 .main {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
@@ -14,11 +19,11 @@
   align-items: center;
   width: 100vw;
 
-  padding-top: 1.75rem;
-  padding-bottom: 1.75rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 
-  background-color: rgba(255, 255, 255, 0.75);
-  backdrop-filter: blur(5px);
+  background-color: rgba(255, 255, 255, 0.9);
+  backdrop-filter: blur(20px);
 }
 
 .left-nav {
@@ -161,17 +166,12 @@
 
 
 @media screen and (max-width: 600px) {
-
-
   .container {
 
     padding-left: 1rem;
     padding-right: 1rem;
     
   }
-
-
-
 }
 
 
